Complete main merge